// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks the selected row as .active 1`] = `
<Sidebar
  active={1}
  bounties={
    Array [
      Object {
        "guid": "asdf",
      },
      Object {
        "guid": "demo",
      },
    ]
  }
  remove={[Function]}
  select={[Function]}
>
  <div
    className="Sidebar"
  >
    <header
      className="Sidebar-Header"
    >
      <img
        alt="Polyswarm logo"
        src="/img/polyswarm.svg"
      />
    </header>
    <ul
      className="Sidebar-Content"
    >
      <ListItem
        active={false}
        className="item-0"
        key="asdf"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            <span
              className="ListItem-Child"
              onClick={[Function]}
            >
              asdf
            </span>
          </div>
        </li>
      </ListItem>
      <ListItem
        active={true}
        className="item-1"
        key="demo"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem active"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            <span
              className="ListItem-Child"
              onClick={[Function]}
            >
              demo
            </span>
          </div>
        </li>
      </ListItem>
    </ul>
  </div>
</Sidebar>
`;

exports[`renders without crashing 1`] = `
<div
  class="Sidebar"
>
  <header
    class="Sidebar-Header"
  >
    <img
      alt="Polyswarm logo"
      src="/img/polyswarm.svg"
    >
      
    </img>
  </header>
  <ul
    class="Sidebar-Content"
  >
    
  </ul>
</div>
`;

exports[`shows alert when bounty has updated: true 1`] = `
<Sidebar
  bounties={
    Array [
      Object {
        "guid": "asdf",
        "updated": true,
      },
      Object {
        "guid": "demo",
      },
    ]
  }
  remove={[Function]}
  select={[Function]}
>
  <div
    className="Sidebar"
  >
    <header
      className="Sidebar-Header"
    >
      <img
        alt="Polyswarm logo"
        src="/img/polyswarm.svg"
      />
    </header>
    <ul
      className="Sidebar-Content"
    >
      <ListItem
        active={false}
        alert={true}
        className="item-0"
        key="asdf"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            <div
              className="alert"
            />
            <span
              className="ListItem-Child"
              onClick={[Function]}
            >
              asdf
            </span>
          </div>
        </li>
      </ListItem>
      <ListItem
        active={false}
        className="item-1"
        key="demo"
        onClick={[Function]}
        remove={[Function]}
      >
        <li
          className="ListItem"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            <span
              className="ListItem-Child"
              onClick={[Function]}
            >
              demo
            </span>
          </div>
        </li>
      </ListItem>
    </ul>
  </div>
</Sidebar>
`;
